<resources>
    <string name="app_name">Serverus Craftus</string>
    <string name="find_the_server_s_status">Find the Server\'s Status</string>
    <string name="java">Java</string>
    <string name="bedrock">Bedrock</string>
    <string name="server_ip">server ip</string>
    <string name="port">port</string>
    <string name="server_status">Server Status</string>
    <string name="popular_servers">Popular Servers</string>
    <string name="about">About</string>
    <string name="fina_a_bug_report_it_here">Fina a bug? Report it on our bug tracker website</string>
    <string name="bug_report">Bug Report</string>
    <string name="description">Description</string>
    <string name="title">Writing a good bug report</string>
    <string name="report">Report</string>
    <string name="add_to_my_servers">Add to My Servers</string>
    <string name="players">Players</string>
    <string name="motd">MOTD</string>
    <string name="version">Version</string>
    <string name="status">Status</string>
    <string name="ip">IP</string>
    <string name="help">Help</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="my_servers">My Servers</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username_hint">user@domain.com</string>
    <string name="check_status">Check Status</string>
    <string name="starting_tips">Starting Tips</string>
    <string name="things_to_keep_in_mind">Things to keep in Mind</string>
    <string name="hypixel_ip">Hypixel</string>
    <string name="java_mineplex_ip">Mineplex (java)</string>
    <string name="uncensored_library_ip">The Uncensored Library</string>
    <string name="bedrock_mineplex_ip">Mineplex (bedrock)</string>
    <string name="the_hive_ip">The Hive</string>
    <string name="lifeboat_ip">LifeBoat</string>
    <string name="go">Go</string>
    <string name="you_havent_saved_any_servers">You haven\'t saved any servers yet</string>
    <string name="browse_popular_servers">Browse Popular Servers</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="help_starting_tips">To use the app, first you need to go to the Server Status home page.\n\nFrom there you chose which version of Minecraft that the server is on, either \"Java\" for Minecraft java edition, or \"Bedrock\" for any other version of Minecraft.\n\nOnce you have chose a version, simply put in the server\'s ip (and port if you are looking up a bedrock server) and press \"Go\" to find the status.\n\n\nIf you would like to save a server to look up the status later, please create an account and click \"Add to My Servers\".\n\nOnce you do this, you can go to \"My Servers\" when you are logged in and you will see any servers that you have saved.\n</string>
    <string name="help_things_to_remember">These are a few things to be mindful of when using the app. Please do not contact the developer about these things, as they are already working on fixes for them, or are minor enough to be ignored.\n\n\n1. A stable internet or wifi connection is <b>required</b> to use this app \n\n2. Information will not load immediately and will take a few seconds to load\n\n3. Server lookup information will only change once every <b>10 minutes</b> (this is so that the app and server can keep up with all the other people who also want to check server statuses)\n\n4. Currently the bug report is in beta and is not going to be linked until it has been finished, please hang tight until it is done!\n</string>
    <string name="bug_report_guide_1">Did you notice a bug with the app, but don\'t know how to effectively fill out a bug report? Here are some steps to follow if you are new to writing bug reports!</string>
    <string name="bug_report_guide_2"><b>Title</b>: briefly specify the problem that you faced\n\n<b>Environment</b>: ask yourself the following question \"what kind of device am I using the app on, and what operating system version is the device running?\"\n\n<b>Description</b>: give a brief explanation of what the bug does or what is it affecting\n\n<b>Steps to reproduce a Bug</b>: explain the steps leading up to when you experienced the bug or how to trigger the bug again\n\n<b>Expected Result</b>: what you expected to happen when you followed the above steps\n\n<b>Actual Result</b>: what actually happened when you followed the above steps\n\n<b>Visual Proof of Bug</b>: if you have any screenshots, videos, or text related to the bug include them with your report\n</string>
    <string name="loading_please_wait">Loading... Please wait</string>
</resources>