<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tile"
    tools:context=".BugReportActivity">

    <TextView
        android:id="@+id/bugReportTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bug_report"
        android:textSize="@dimen/h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primaryDarkColor"
        android:textColor="@color/backgroundColor"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/findBugTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fina_a_bug_report_it_here"
        android:textSize="@dimen/h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bugReportTitle"
        android:layout_marginTop="@dimen/spacing"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/findBugTitle"
        android:layout_marginTop="@dimen/spacing"
        android:padding="@dimen/spacing">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h2"
            android:text="@string/title" />

        <EditText
            android:id="@+id/titleBugReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h2"
            android:text="@string/description" />

        <EditText
            android:id="@+id/descriptionBugReport"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/reportButtonBugReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/secondaryTextColor"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>