<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tile"
    tools:context=".ServerStatusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h1"
            android:text="Server Status" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/h2"
                    android:text="@string/ip" />

                <TextView
                    android:id="@+id/ipTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="play.test.com : 65525" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/h2"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/statusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="online" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/h2"
                    android:text="@string/version" />

                <TextView
                    android:id="@+id/versionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1.18.0, 1.18.1, 1.18.2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/h2"
                    android:text="@string/motd" />

                <TextView
                    android:id="@+id/motdTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="A Minecraft Server" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/h2"
                    android:text="@string/players" />

                <TextView
                    android:id="@+id/playerCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1/ 20" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_my_servers"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/secondaryTextColor"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>