<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tile"
    android:id="@+id/helpDrawer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:context=".ui.HelpActivity">

        <TextView
            android:id="@+id/helpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="@dimen/h1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/spacing"
            android:background="@color/primaryDarkColor"
            android:textColor="@color/backgroundColor"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/startingTipsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:orientation="vertical"
            android:padding="@dimen/spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helpTitle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:padding="@dimen/spacing"
                android:text="@string/starting_tips"
                android:textStyle="bold"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/startingTipsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:ellipsize="none"
                android:padding="@dimen/spacing"
                android:textSize="@dimen/h3"
                android:text="@string/help_starting_tips"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:orientation="vertical"
            android:padding="@dimen/spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startingTipsLinearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing"
                android:background="@color/backgroundColor"
                android:text="@string/things_to_keep_in_mind"
                android:textStyle="bold"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/keepInMindTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:ellipsize="none"
                android:padding="@dimen/spacing"
                android:textSize="@dimen/h3"
                android:text="@string/help_things_to_remember"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- navigation menu -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/helpNavView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/secondaryLightColor" />

</androidx.drawerlayout.widget.DrawerLayout>